# ByteDance-Offer-Copilot-Skill

./: .gitignore  README.md  SKILL.md  main.py  pyproject.toml  requirements.txt  trae-skill.json  utils.py
components/: __init__.py  export.py  styles.py  ui.py
modules/: __init__.py  career_matcher.py  contradiction_engine.py  corporate_bs_detector.py  group_interview.py  growth_advisor.py  growth_tracker.py  internet_persona.py  interview_feedback.py  jd_analyzer.py  mock_interviewer.py  offer_predictor.py  project_authenticity.py  resume_rewriter.py  self_review.py
